# cmake-examples

./: CMakeLists.txt
exec/: CMakeLists.txt
exec/source/: main.c  strings.c
sub1/: CMakeLists.txt
sub1/source/: sub1.c  sub1.h
sub2/: CMakeLists.txt
sub2/source/: sub2.c
